force-app/main/default/objects/Holder_ControlPlan_Detail__c/Holder_ControlPlan_Detail__c.object-meta.xml
<CustomObject>
    <label>Holder ControlPlan Detail</label>
    <nameField>
        <label>Holder ControlPlan Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holder ControlPlan Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>