force-app/main/default/objects/Holder_ControlPlan_Detail__c/fields/Special_Characteristic_Classification__c.field-meta.xml
<CustomField>
    <fullName>Special_Characteristic_Classification__c</fullName>
    <label>Special Characteristic Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>