force-app/main/default/objects/Holder_ControlPlan_Detail__c/fields/Test_OPNO_1__c.field-meta.xml
<CustomField>
    <fullName>Test_OPNO_1__c</fullName>
    <label>Test OPNO 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>