force-app/main/default/objects/Holder_ControlPlan_Detail__c/fields/Tool_ID__c.field-meta.xml
<CustomField>
    <fullName>Tool_ID__c</fullName>
    <label>Tool ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>