force-app/main/default/objects/Holder_ControlPlan_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Test_OPNO__c</columns>
    <columns>Text1Val__c</columns>
    <columns>Text2Val__c</columns>
    <columns>Text3Val__c</columns>
    <columns>Text4Val__c</columns>
    <columns>Num1Val__c</columns>
    <columns>Num2Val__c</columns>
    <columns>TEST_OPERATION_DESC__c</columns>
    <columns>NORM_TYPE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>